[package]
name = "hfile"
version = "0.1.0"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "Hfile is a command-line interface (CLI) tool for generating hash values of files"
documentation = "https://github.com/nbari/hfile"
repository = "https://github.com/nbari/hfile"
homepage = "https://github.com/nbari/hfile"
readme = "README.md"
keywords = ["hash", "cli", "fingerprint", "checksum"]
categories = ["command-line-utilities", "cryptography"]
license = "BSD-3-Clause"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.3", features = ["cargo", "derive"] }
