[package]
name = "hfile"
version = "0.2.2"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "Hfile is a command-line interface (CLI) tool for generating hash values of files"
documentation = "https://github.com/nbari/hfile"
repository = "https://github.com/nbari/hfile"
homepage = "https://github.com/nbari/hfile"
readme = "README.md"
keywords = ["hash", "cli", "fingerprint", "checksum"]
categories = ["command-line-utilities", "cryptography"]
license = "BSD-3-Clause"
edition = "2021"

[dependencies]
anyhow = "1"
blake3 = "1"
bytesize = "1"
clap = { version = "4.3", features = ["cargo", "derive"] }
futures = "0.3"
md5  = "0.7"
num_cpus = "1.15"
path-clean = "1"
ring = "0.16"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
